filter panel fix

--- a/src/Presentation/FrontEnd/PublicWebApp/Web.config
+++ b/src/Presentation/FrontEnd/PublicWebApp/Web.config
@@ -49,7 +49,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <caching>
-      <outputCache enableOutputCache="false" defaultProvider="MemoryCache">
+      <outputCache enableOutputCache="true" defaultProvider="MemoryCache">
         <providers>
           <add name="MemoryCache" type="VirtoCommerce.ApiWebClient.Caching.MemoryCacheProvider, VirtoCommerce.ApiWebClient" /> 
         </providers>
