removed mp prefix from connection string

--- a/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/connectionStrings.config
+++ b/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/connectionStrings.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <connectionStrings>
-  <add name="VirtoCommerce" connectionString="http://localhost/admin/api/mp/" />
-  <add name="VirtoCommerceSecurity" connectionString="http://localhost/admin/api/security/" />
+  <add name="VirtoCommerce" connectionString="http://localhost/admin/api/" />
 </connectionStrings>
