--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
@@ -64,25 +64,26 @@
     <Compile Include="Inventory\Services\IInventoryService.cs" />
     <Compile Include="Order\Model\Address.cs" />
     <Compile Include="Order\Model\AddressType.cs" />
-    <Compile Include="Order\Model\CommingInOperation.cs" />
-    <Compile Include="Order\Model\CommingOutOperation.cs" />
     <Compile Include="Order\Model\Coupon.cs" />
     <Compile Include="Order\Model\CustomerOrder.cs" />
+    <Compile Include="Order\Model\IFinanceInOperation.cs" />
+    <Compile Include="Order\Model\IFinanceOperation.cs" />
+    <Compile Include="Order\Model\IFinanceOutOperation.cs" />
+    <Compile Include="Order\Model\IOperation.cs" />
+    <Compile Include="Order\Model\IPosition.cs" />
+    <Compile Include="Order\Model\IStockInOperation.cs" />
+    <Compile Include="Order\Model\IStockOperation.cs" />
+    <Compile Include="Order\Model\IStockOutOperation.cs" />
     <Compile Include="Order\Model\LineItem.cs" />
     <Compile Include="Order\Services\IOperationNumberGenerator.cs" />
     <Compile Include="Order\Model\CustomerOrderResponseGroup.cs" />
     <Compile Include="Order\Model\Discount.cs" />
-    <Compile Include="Order\Model\FinanceInOperation.cs" />
-    <Compile Include="Order\Model\FinanceOperation.cs" />
-    <Compile Include="Order\Model\FinanceOutOperation.cs" />
     <Compile Include="Order\Model\Operation.cs" />
     <Compile Include="Order\Model\PaymentIn.cs" />
     <Compile Include="Order\Model\PaymentMethod.cs" />
-    <Compile Include="Order\Model\Position.cs" />
     <Compile Include="Order\Model\SearchCriteria.cs" />
     <Compile Include="Order\Model\SearchResult.cs" />
     <Compile Include="Order\Model\Shipment.cs" />
-    <Compile Include="Order\Model\StockOperation.cs" />
     <Compile Include="Order\Services\ICustomerOrderService.cs" />
     <Compile Include="Order\Services\ICustomerOrderSearchService.cs" />
     <Compile Include="Order\Services\IPaymentService.cs" />
