added client to the core project

--- a/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
+++ b/src/Extensions/Client/Commerce.ApiClient/VirtoCommerce.ApiClient.csproj
@@ -74,6 +74,18 @@
     <Compile Include="Constants.cs" />
     <Compile Include="DataContracts\Association.cs" />
     <Compile Include="DataContracts\BrowseQuery.cs" />
+    <Compile Include="DataContracts\Cart\Address.cs" />
+    <Compile Include="DataContracts\Cart\CardSummary.cs" />
+    <Compile Include="DataContracts\Cart\CartItem.cs" />
+    <Compile Include="DataContracts\Cart\Coupon.cs" />
+    <Compile Include="DataContracts\Cart\Dimension.cs" />
+    <Compile Include="DataContracts\Cart\Discount.cs" />
+    <Compile Include="DataContracts\Cart\Payment.cs" />
+    <Compile Include="DataContracts\Cart\PaymentMethod.cs" />
+    <Compile Include="DataContracts\Cart\Shipment.cs" />
+    <Compile Include="DataContracts\Cart\ShipmentMethod.cs" />
+    <Compile Include="DataContracts\Cart\ShoppingCart.cs" />
+    <Compile Include="DataContracts\Cart\Weight.cs" />
     <Compile Include="DataContracts\CatalogItem.cs" />
     <Compile Include="DataContracts\CatalogItemResponse.cs" />
     <Compile Include="DataContracts\Category.cs" />
@@ -105,8 +117,10 @@
     <Compile Include="DataContracts\Store\StoreSetting.cs" />
     <Compile Include="DataContracts\Store\StoreState.cs" />
     <Compile Include="DataContracts\TagQuery.cs" />
+    <Compile Include="Extensions\CartClientExtension.cs" />
     <Compile Include="Extensions\SeoClientExtensions.cs" />
     <Compile Include="Extensions\StoreClientExtensions.cs" />
+    <Compile Include="CartClient.cs" />
     <Compile Include="SeoClient.cs" />
     <Compile Include="Session\CustomerSession.cs" />
     <Compile Include="Session\CustomerSessionService.cs" />
