--- a/src/Presentation/FrontEnd/PublicWebApp/PublicWebApp.csproj
+++ b/src/Presentation/FrontEnd/PublicWebApp/PublicWebApp.csproj
@@ -617,9 +617,9 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Extensions\Client\Commerce.ApiClient\Commerce.ApiClient.csproj">
-      <Project>{84b945b7-85e4-4057-b0df-1f8a03b8d53c}</Project>
-      <Name>Commerce.ApiClient</Name>
+    <ProjectReference Include="..\..\..\Extensions\Client\Commerce.ApiClient\VirtoCommerce.ApiClient.csproj">
+      <Project>{291360b7-9a91-453b-b81e-76d6c90b92ea}</Project>
+      <Name>VirtoCommerce.ApiClient</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Extensions\Client\Commerce.ApiWebClient\Commerce.ApiWebClient.csproj">
       <Project>{a67c7412-708c-4978-a666-6b9414bbf696}</Project>
