--- a/src/Presentation/WebAdmin/Modules/Cart/VirtoCommerce.CartModule.Data/VirtoCommerce.CartModule.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/Cart/VirtoCommerce.CartModule.Data/VirtoCommerce.CartModule.Data.csproj
@@ -59,9 +59,9 @@
     <Compile Include="Converters\PaymentConverter.cs" />
     <Compile Include="Converters\ShipmentConverter.cs" />
     <Compile Include="Converters\ShoppingCartConverter.cs" />
-    <Compile Include="Migrations\201502011543475_Initial.cs" />
-    <Compile Include="Migrations\201502011543475_Initial.Designer.cs">
-      <DependentUpon>201502011543475_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201502041625363_Initial.cs" />
+    <Compile Include="Migrations\201502041625363_Initial.Designer.cs">
+      <DependentUpon>201502041625363_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\AddressEntity.cs" />
@@ -75,6 +75,7 @@
     <Compile Include="Services\ModuleSeviceBase.cs" />
     <Compile Include="Services\ShoppingCartSearchServiceImpl.cs" />
     <Compile Include="Services\ShoppingCartServiceImpl.cs" />
+    <Compile Include="Workflow\CalculateTotalsActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -95,8 +96,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201502011543475_Initial.resx">
-      <DependentUpon>201502011543475_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201502041625363_Initial.resx">
+      <DependentUpon>201502041625363_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
