- added updated method to cart client - added cart db initializer

--- a/src/Presentation/WebAdmin/Modules/Cart/VirtoCommerce.CartModule.Data/VirtoCommerce.CartModule.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/Cart/VirtoCommerce.CartModule.Data/VirtoCommerce.CartModule.Data.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartDatabaseInitializer.cs" />
     <Compile Include="Converters\AddressConverter.cs" />
     <Compile Include="Converters\LineItemConverter.cs" />
     <Compile Include="Converters\PaymentConverter.cs" />
