--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Web.config
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Web.config
@@ -46,6 +46,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <!-- In case IIS already has this mime type -->
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
