--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
@@ -121,6 +121,12 @@
     <Compile Include="Payment\Services\IPaymentGateway.cs" />
     <Compile Include="Payment\Services\IPaymentGatewayManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Store\Model\FulfillmentCenter.cs" />
+    <Compile Include="Store\Model\SettingValueType.cs" />
+    <Compile Include="Store\Model\Store.cs" />
+    <Compile Include="Store\Model\StoreSetting.cs" />
+    <Compile Include="Store\Model\StoreState.cs" />
+    <Compile Include="Store\Services\IStoreService.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
