--- a/src/Core/CommerceFoundation.Data/CommerceFoundation.Data.csproj
+++ b/src/Core/CommerceFoundation.Data/CommerceFoundation.Data.csproj
@@ -169,6 +169,7 @@
     </Compile>
     <Compile Include="Infrastructure\Interceptors\AuditableInterceptor.cs" />
     <Compile Include="Infrastructure\Interceptors\EntityPrimaryKeyGeneratorInterceptor.cs" />
+    <Compile Include="Infrastructure\ServiceBase.cs" />
     <Compile Include="Infrastructure\SetupDatabaseInitializer.cs" />
     <Compile Include="Customers\SqlCustomerSampleDatabaseInitializer.cs" />
     <Compile Include="Importing\EFImportingRepository.cs" />
